Change a way how to calculate molecular profile id